# ai-hitl-iso-compliance-fastapi

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
src/: Dockerfile  client.py  main.py  notebook.ipynb  restack_up.py  services.py
src/functions/: function.py
src/routers/: __init__.py  compliance.py  gemini.py  upload.py
src/workflows/: gemini_generate_content.py
